test/fail/classes/class_property_redecl.lily
#[
SyntaxError: Property a already exists in class ABC.
    from class_property_redecl.lily:6:
]#

class ABC { var @a = 1 var @a = 1 }
